--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </nav>
               <br>
                 
-<div class ="container">
+<div class ="container-fluid">
         <div class="row">
                 <div class="col-sm-9 col-md-6 col-lg-8" style="background-color:#BCC6CC
                 ;">
