--- a/subreddit2.html
+++ b/subreddit2.html
@@ -197,7 +197,7 @@
                                     
                                   </div>
 
-
+                                    <div class ="container-fluid">
 
                                   <div class="row">
                                         <div class="col-sm-9 col-md-6 col-lg style="background-color: eeffee;
